# see-movies

./: .env  .gitignore  LICENSE  README.md  docker-compose.yml  heroku.yml
backend/: .gitignore  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  crud.py  db.py  external_api.py  main.py  models.py  schemas.py
backend/app/api/: routes.py
backend/app/api/routes/: favorites.py  movies.py
backend/app/core/: config.py  db.py
backend/app/services/: tmdb_service.py
backend/tests/: conftest.py  test_favorites.py  test_main.py
backend/tests/api/routes/: test_favorites.py  test_movies.py
frontend/: .env.local  next.config.mjs  package-lock.json  package.json  tailwind.config.js
frontend/src/app/: layout.js
frontend/src/app/(movies)/: page.js
frontend/src/app/(movies)/[id]/details/: page.js
frontend/src/app/favorites/: layout.js  page.js
frontend/src/app/lib/: data.js
frontend/src/app/ui/: back-to-home.js  back-to-top-button.js  bottom-drawer.js  bottom-navigation.js  globals.css  pageback-button.js  search-bar.js  title.js  toast-context.js
frontend/src/app/ui/favorites/: create-favoritelist-drawer.js  delete-favorite-list-button.js  favoritelist-card.js  favoritelist-item-skeleton.js  favoritelist-list.js  favoritelist-section.js  remove-movie-from-favorite.js  share-favorite-list.js
frontend/src/app/ui/layouts/: footer.js  header.js  page-header.js
frontend/src/app/ui/movies/: add-movie-to-favorite.js  favorite-list-adder.js  movie-card.js  movie-list-skeleton.js  movie-list.js  movies-section.js  movies-skeleton.js
(+2 files in other folders)
