[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["victormoraes <victor.moraesrj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.112.2"}
uvicorn = {extras = ["standard"], version = "^0.30.6"}
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
requests = "^2.32.3"
pydantic-settings = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
